# steins

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  corpus.lock.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/steins-catalog/: Cargo.toml
crates/steins-catalog/src/: hierarchy_generated.rs  lib.rs  return_facts_generated.rs
crates/steins-cli/: Cargo.toml
crates/steins-cli/src/: baseline.rs  doctor.rs  main.rs  profile.rs  sha256.rs
crates/steins-cli/tests/: cli.rs  doctor.rs  profile.rs  suppress.rs  transform.rs
crates/steins-cli/tests/fixtures/: annotate.php  broken.php  coercive.php  demo.php  fold_arg.php  fold_assign.php  fold_mixed.php  fold_nonliteral.php  fold_strval_coercive.php  fold_strval_strict.php  nullable.php  nullable_strict.php  silent.php  strict.php
crates/steins-cli/tests/fixtures/vendor_proj/: app.php
crates/steins-cli/tests/fixtures/walk/: lib.php
crates/steins-cli/tests/fixtures/walk/sub/: main.php
crates/steins-contract/: Cargo.toml
crates/steins-contract/src/: admit.rs  lib.rs  normalize.rs  spell.rs
crates/steins-contract/tests/: end_to_end.rs  phpstan_port.rs
crates/steins-contract/tests/fixtures/phpstan/: accepts.toml  is_super_type_of.toml  type_combinator_union.toml
crates/steins-db/: Cargo.toml
crates/steins-db/src/: lib.rs
crates/steins-db/tests/: class_alias.rs
crates/steins-domain/: Cargo.toml
crates/steins-domain/src/: certainty.rs  fact.rs  lib.rs  php.rs  preds.rs  range.rs  (+1 more)
crates/steins-edit/: Cargo.toml
crates/steins-edit/src/: common.rs  diff.rs  honesty.rs  lib.rs  obstacles.rs  plan.rs  promote.rs  regions.rs  transform.rs
crates/steins-edit/tests/: honesty.rs  honesty_methods.rs  partitions_identity.rs  promote.rs  promote_methods.rs
crates/steins-infer/: Cargo.toml
crates/steins-infer/src/: dam.rs  lib.rs  promote.rs  suppress.rs
crates/steins-infer/tests/: arity.rs  binding.rs  branch_analysis.rs  builtin_return_facts.rs  callable_signature.rs  class_undefined.rs  closure_effects.rs  closure_liskov.rs  closures.rs  cross_file.rs  dump_surface.rs  effects.rs  exhaustiveness.rs  existence_guard.rs  folding.rs  generics_carry.rs  instanceof_oracle.rs  lsb_static_return.rs  match_switch.rs  methods.rs  narrowing_n4.rs  object_acceptance.rs  object_state.rs  offset_family.rs  opaque_reads.rs  phpdoc_class_contract.rs  phpdoc_contract.rs  phpdoc_undefined_method.rs  registry.rs  short_circuit.rs  stage2_facts.rs  stratum.rs  sweep_carriage.rs  this_exactness.rs  throws.rs  truth_table.rs  undefined_function.rs  undefined_method.rs  union_and_return.rs  value_side_instanceof.rs
crates/steins-phpdoc/: Cargo.toml
crates/steins-phpdoc/src/: ast.rs  docblock.rs  lexer.rs  lib.rs  parser.rs
crates/steins-phpdoc/tests/: reference_corpus.rs
crates/steins-phpdoc/tests/fixtures/: reference-types.expected  reference-types.txt
crates/steins-sidecar/: Cargo.toml  runner.php
crates/steins-syntax/: Cargo.toml
crates/steins-syntax/src/: lib.rs
crates/steins-syntax/tests/: array_lowering.rs  closures.rs  docblock_assoc.rs  grouped_use.rs  relative_names.rs  smoke.rs
docs/: ROADMAP.md  phpstan-divergences.md
docs/adr/: 0001-call-site-value-propagation.md  0002-two-layer-diagnostics-zero-fp.md  0003-syntax-tree-ownership.md  0004-php-sidecar-default-on.md  0005-effects-second-inferred-dimension.md  0006-effect-declaration-syntax.md  0007-checked-unchecked-throw-accounting.md  0008-initial-effect-lattice.md  0009-salsa-demand-driven-engine.md  0010-own-codemod-engine-agent-first.md  0011-php-floor-8x-only.md  0012-plugin-architecture-frameworks-deferred.md  0013-verification-apparatus.md  0014-builtin-catalog-sourcing.md  0015-vendor-propagation-with-budgets.md  0016-greenfield-not-upstream.md  0017-no-lint-no-format.md  0018-hierarchical-effect-labels.md  0019-never-exit-and-control-effects.md  0020-cli-surface.md  0021-catalog-seeding-and-corpus.md  0022-diagnostic-id-registry-and-baseline.md  0023-config-toml-and-suppression-channels.md  0024-sidecar-protocol.md  0025-license-boundaries-and-packaging.md  0026-corpus-harness-xtask.md  0027-linear-trace-ir-staged-propagation.md  0028-folding-outside-query-graph.md  0029-phpdoc-grammar-phpstan-compat.md  0030-type-semantics-phpstan-core-divergence-registry.md  0031-structured-trace-tree-branch-analysis.md  0032-generics-under-propagation.md  0033-closures-as-values-and-liskov.md  0034-transform-engine-skeleton.md  0035-four-layer-value-domain.md  0036-object-state-heap-model.md  0037-trust-stratification-proven-beats-declared.md  0038-no-taint-value-provenance-labels-reserved.md  0039-plugin-contract.md  0040-throw-damming-semantics.md  (+17 more)
docs/agents/: issue-tracker.md  triage-labels.md
docs/guide/: README.md  profiles-and-baseline.md  quickstart.md
docs/handbook/: 01-getting-started.md  02-the-type-system.md  03-narrowing-and-trust.md  04-effects.md  README.md
docs/internal-spec/: README.md  baseline.md  catalog.md  config.md  crate-topology.md  diagnostic-shape.md  folding-and-sidecar.md  inference-engine.md  plugin-contract.md  public-surface.md  query-graph.md  syntax-tree-contract.md  trace-ir.md  transform-engine.md  verification-apparatus.md
docs/ja/: phpstan-divergences.md
docs/notes/: 20260722-builtin-frequency.md  20260722-oxidized-php-checkers.md  20260724-adoption-drill-record.md  20260724-adr0049-0052-soundness-audit.md  20260724-g1-throw-origin-measurement.md  20260724-v010-auto-adr-log.md  README.md
docs/research/: README.md
docs/type-specification/: README.md  certainty.md  closures.md  contract-types.md  diagnostic-policy.md  divergence-registry.md  dynamism.md  effects.md  narrowing.md  not-implemented.md  object-model.md  overview.md  phpdoc-grammar.md  throws.md  trust-stratification.md  value-domain.md
harness/phpdoc-oracle/: composer.json  dump.php  extract-inputs.php
spike/mago-spike/: Cargo.toml  REPORT.md
spike/mago-spike/src/: main.rs
xtask/: Cargo.toml
xtask/src/: corpus.rs  corpus_local.rs  freq.rs  gate.rs  gen_catalog.rs  main.rs  nsrt.rs  phpdoc_oracle.rs  sync.rs
(+12 files in other folders)
