# Dev tooling — the cargo-xtask pattern (ADR-0013/0021 verification apparatus).
#
# Invoked as `cargo xtask <command>` (alias in .cargo/config.toml). It depends on
# the analysis crates as LIBRARIES (never shells out to the `steins` binary) so it
# reads parse errors and call data straight off `SourceTree` and runs the salsa
# proof-layer pipeline directly. Not a dependency of any shipped crate.
[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
steins-syntax = { path = "../crates/steins-syntax" }
steins-db = { path = "../crates/steins-db" }
steins-infer = { path = "../crates/steins-infer" }

rayon.workspace = true
toml.workspace = true
semver.workspace = true
serde.workspace = true
