[package]
name = "steins-contract"
description = "Contract acceptance (ADR-0030): phpdoc types judged against the value domain."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
steins-domain = { path = "../steins-domain" }
steins-phpdoc = { path = "../steins-phpdoc" }

[dev-dependencies]
proptest = "1"
